--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 #theme: landscape
-theme: jekyll-theme-hacker
+theme: jekyll-theme-cayman
 
 archive_generator:
     per_page: 0
